--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,16 +1,14 @@
 development:
   clients:
     default:
-      uri: <%= ENV['mongodb_uri'] %>
+      uri: <%= ENV['MONGODB_URI'] %>
       options:
         server_selection_timeout: 1
   options:
 test:
   clients:
     default:
-      database: backend_challenge_test
-      hosts:
-        - localhost:27017
+      uri: <%= ENV['MONGODB_URI'] %>
       options:
         read:
           mode: :primary
